# mobius

./: .gitignore  API_ROADMAP.md  Dockerfile  Dockerfile.api  LICENSE.txt  README.md  api.py  api_issues.md  api_issues_more.md  autocomplete.py  big_refactor_new_features.md  bot.py  commands.py  conftest.py  constants.py  fly.api.toml  fly.toml  hello.py  load_secrets.sh  mobius.py  mobius.service.example  prefix_adapter.py  pyproject.toml  requirements.txt  run.sh  run_api_tests.sh  services.py  set_env.sh  tasks.py  test_api.py  test_celeste.py  test_pixelart.py  utils.py  views.py  webui.py
backend/: README.md  comfy_ui.py  local_api.py  whisper_util.py
backend/comfy_workloads/: README.md  anim.json  anim_api.json  animate_diff_txt_to_vid.json  comfy_ui_sdxl_and_refiner.json  img_to_vid_interp_workflow_api.json  sdxl_to_svd_prompt.json  sdxl_turbo_comfy_prompt.json
bot/: README.md  constants.py  util.py
commands/: audio.py  image_generation.py  ollama_command.py  text.py  utility.py
gradio_app/: audio.py  image_generation.py  main.py  text.py  utility.py  video.py
scripts/: scaffold-gradio.sh  scaffold-test.sh  scaffold.sh
services/: chatgpt.py  claude.py  comfy_ui.py  fal_ai.py  google.py  ollama_service.py  weather.py  youtube.py
stream-status/: README.md  pyproject.toml  send_status.py  stream-status.service
tests/: __init__.py  test_audio.py  test_image_generation.py  test_ollama.py  test_text.py  test_utility.py  test_video.py
utils/: audio_utils.py  image_utils.py  video_utils.py
workflows/: t2v.json
