[project]
name = "mobius-refactored"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "anthropic>=0.42.0",
    "discord-py>=2.4.0",
    "fal-client>=0.5.6",
    "moviepy==1.0.3",
    "openai>=1.59.7",
    "opencv-python>=4.10.0.84",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "scipy>=1.15.1",
]
